[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-compliance-system"
version = "1.0.0"
description = "GST Compliance Management System"
authors = [{name = "GST Compliance Team"}]
dependencies = [
    "Django==5.2.6",
    "djangorestframework==3.16.1",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "dj-database-url==3.0.1",
    "whitenoise==6.11.0",
    "python-decouple==3.8",
    "django-cors-headers==4.8.0",
    "pillow==11.3.0",
    "pytz==2025.2",
    "django-celery-beat==2.5.0",
    "celery==5.3.4",
    "redis==5.0.1",
]

[tool.setuptools]
packages = ["gst_compliance_system", "accounts", "clients", "dashboard", "gst_integration", "notices"]
